--- a/listaTarefas/package.json
+++ b/listaTarefas/package.json
@@ -12,7 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.2",
     "express": "^4.19.2",
-    "mongoose": "^8.2.4"
+    "jest": "^29.7.0",
+    "mongoose": "^8.2.4",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.3"
   }
 }
