--- a/listaLivros/books-api/package.json
+++ b/listaLivros/books-api/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "autocannon": "^7.15.0",
     "express": "^4.19.2",
     "mongoose": "^8.2.3"
   }
